# future-economy-indices

./: .dockerignore  .env.example  .gitignore  CI_CD_SETUP.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  NEXT_STEPS.md  PRODUCTION_ROADMAP.md  README.md  SPACEINFRA_PLAN.md  WEIGHTING_EXAMPLE.md  YEAR1_BUSINESS_PLAN.md
.github/workflows/: README.md  build.yml  deploy.yml  test-secrets.yml  test.yml
.sqlx/: query-0d3ce067abc07a1c6f4a72ddf89f0a5e99eaebfdda4019060921387ad5477746.json  query-2d49545c353f1fee644125741cdc85991e35b793e7d1bb4f3fd1657f3118bb0f.json  query-374cc4c7775051dfb1be0c1048f84c8763c809a47256e828542d7df868a27a6c.json  query-4d4f6da26e3a7c06784a5813f1ac54477a4cc6044d8bfc7a37638f5d80367d80.json  query-6517197750d9c68efb1cc9a821c6d866d87728f22b94713e8f028f9017467299.json  query-6ac843e7a8238f2d5212753121a335642ff95a00ff4426cbea6b51fed11243a6.json  query-6b34029a903d32d5b8aa6ae403460a4cda782a4d78412c3fd56bfc06bb045b98.json  query-77a1397ce8ad54944701b2023486f4f80cf8190a04051dec4caee6de0663f65a.json  query-7fc4e331712d2060b315a85a7990b58ffe8826a074cb8c646b1c3a611fd99c90.json  query-9006ee54882f1ccd3feaa047c44905cdbf64b8ca5192ced5af40f323fea7449a.json  query-a2630765a0029d55d50c0d50860dbddebfc7cb63096991fd15ef9e36e5592c93.json  query-aa0b173d1211ded2e87a315ec315d49129fa864067e2501f741b9616d94f7f90.json  query-c3e524d9f5ed140346979f6e0ee51e421d2784e37afa433127c8a8612a63b2a4.json  query-c622317c99489deb8f7472813d112139bfc302d8589ccb65180c81ff04738c2f.json  query-ebe9ec031dd293ae57ce99854b9bf2ff9742e20a7dcd03ba54508b60cd29c94f.json  query-faccbff17ac0da7bd9ec1bb86f2c3657d6c1c849f9cb9f2d8ede8680b11d84f3.json  query-fcba983945e40b4b9e9d5409d412e0985595438a0f5be473862c68496e3ec633.json
crates/ai-classifier/: Cargo.toml
crates/ai-classifier/src/: anthropic.rs  lib.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: main.rs  models.rs  state.rs
crates/api-server/src/routes/: indices.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: data.rs  db.rs  index.rs  mod.rs
crates/data-ingestion/: Cargo.toml
crates/data-ingestion/src/: lib.rs  polygon.rs
crates/database/: Cargo.toml
crates/database/migrations/: 001_create_companies.sql  002_create_fundamentals.sql  003_create_index_compositions.sql  004_create_index_performance.sql
crates/database/src/: lib.rs  models.rs  schema.rs
crates/index-engine/: Cargo.toml
crates/index-engine/src/: backtest.rs  lib.rs  weighting.rs
crates/newsletter/: Cargo.toml
crates/newsletter/src/: convertkit.rs  lib.rs  (+1 more)
k8s/: README.md
research/: .env.example  .gitignore  01_explore_polygon_data.ipynb  02_ai_classification.ipynb  BACKTEST_SUMMARY.md  README.md  ai_classifier.py  backtest.py  batch_test.py  build_index.py  expand_universe.py  expansion_log.txt  polygon_client.py  requirements.txt  retry_failed_tickers.py  retry_log.txt  test_anthropic.py  weighting_algorithm.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
website/: package-lock.json  package.json
website/app/: layout.tsx  page.tsx
(+26 files in other folders)
