[workspace]
members = [
    "crates/data-ingestion",
    "crates/ai-classifier",
    "crates/index-engine",
    "crates/database",
    "crates/api-server",
    "crates/cli", "crates/newsletter",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
