[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }

# Internal crates
data-ingestion = { path = "../data-ingestion" }
ai-classifier = { path = "../ai-classifier" }
index-engine = { path = "../index-engine" }
database = { path = "../database" }
