[package]
name = "data-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
